; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_alloc_wrapper.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_alloc_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i8* (i8*, i64, i64, i32*, i32*, i32)* }

@config_valgrind = common dso_local global i64 0, align 8
@chunksize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @chunk_alloc_wrapper(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1, i8* %2, i64 %3, i64 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca %struct.TYPE_7__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %9, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %10, align 8
  store i8* %2, i8** %11, align 8
  store i64 %3, i64* %12, align 8
  store i64 %4, i64* %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %19 = call i32 @chunk_hooks_assure_initialized(%struct.TYPE_8__* %17, %struct.TYPE_7__* %18)
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = load i8* (i8*, i64, i64, i32*, i32*, i32)*, i8* (i8*, i64, i64, i32*, i32*, i32)** %21, align 8
  %23 = load i8*, i8** %11, align 8
  %24 = load i64, i64* %12, align 8
  %25 = load i64, i64* %13, align 8
  %26 = load i32*, i32** %14, align 8
  %27 = load i32*, i32** %15, align 8
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i8* %22(i8* %23, i64 %24, i64 %25, i32* %26, i32* %27, i32 %30)
  store i8* %31, i8** %16, align 8
  %32 = load i8*, i8** %16, align 8
  %33 = icmp eq i8* %32, null
  br i1 %33, label %34, label %35

34:                                               ; preds = %7
  store i8* null, i8** %8, align 8
  br label %49

35:                                               ; preds = %7
  %36 = load i64, i64* @config_valgrind, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %47

38:                                               ; preds = %35
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 0
  %41 = load i8* (i8*, i64, i64, i32*, i32*, i32)*, i8* (i8*, i64, i64, i32*, i32*, i32)** %40, align 8
  %42 = icmp ne i8* (i8*, i64, i64, i32*, i32*, i32)* %41, @chunk_alloc_default
  br i1 %42, label %43, label %47

43:                                               ; preds = %38
  %44 = load i8*, i8** %16, align 8
  %45 = load i32, i32* @chunksize, align 4
  %46 = call i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i8* %44, i32 %45)
  br label %47

47:                                               ; preds = %43, %38, %35
  %48 = load i8*, i8** %16, align 8
  store i8* %48, i8** %8, align 8
  br label %49

49:                                               ; preds = %47, %34
  %50 = load i8*, i8** %8, align 8
  ret i8* %50
}

declare dso_local i32 @chunk_hooks_assure_initialized(%struct.TYPE_8__*, %struct.TYPE_7__*) #1

declare dso_local i8* @chunk_alloc_default(i8*, i64, i64, i32*, i32*, i32) #1

declare dso_local i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
